--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,4 +1,3 @@
-pip==9.0.1
 bumpversion==0.5.3
 wheel==0.30.0
 watchdog==0.8.3
@@ -8,8 +7,8 @@ Sphinx==1.7.1
 
 
 
-autoflake>=1.2,
-flake8>=3.5.0,
-pytest>=3.6.2,
-twine>=1.11.0,
-yapf>=0.22.0,
+autoflake>=1.2
+flake8>=3.5.0
+pytest>=3.6.2
+twine>=1.11.0
+yapf>=0.22.0
